--- a/js/index.html
+++ b/js/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <script src="onescript.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
+    <!-- All of the Node.js APIs are available in this renderer process.
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <script src="onescript.js"></script>
+    and Electron <script>document.write(process.versions.electron)</script>. -->
+
+    <textarea id = "theText">Enter your text here</textarea>
+    <button onclick="changeText()">Make the text sindsyg</button>
     <script>
       // You can also require other files to run in this process
-      require('./renderer.js')
+      require('<./renderer.js')
     </script>
   </body>
 </html>
