--- a/js/index.html
+++ b/js/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <script src="onescript.js"></script>
+    <script src="meme.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
