--- a/js/index.html
+++ b/js/index.html
@@ -17,7 +17,7 @@
 
     <script>
       // You can also require other files to run in this process
-      require('<./renderer.js')
+      require('./renderer.js');
     </script>
   </body>
 </html>
