I fixed the issue where the object sindsyg disappeared after one use, or, you know. I turned sindsyg into a function constructor and defined it in a function

--- a/js/index.html
+++ b/js/index.html
@@ -12,7 +12,7 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>. -->
 
-    <textarea id = "theText">Enter your text here</textarea>
+    <textarea id = "theText" name = "theTExt">Enter your text here</textarea>
     <button onclick="changeText()">Make the text sindsyg</button>
 
     <script>
