--- a/js/index.html
+++ b/js/index.html
@@ -2,18 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>MakE yOUr teXT SiNDSYg</title>
     <script src="meme.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h3>Convert normal text to sindsyg:</h3>
     <!-- All of the Node.js APIs are available in this renderer process.
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>. -->
+    <div class = "myTextbox">
+      <textarea class = "theText" id = "theText" name = "theText">Enter your text here</textarea>
+    </div>
 
-    <textarea id = "theText" name = "theTExt">Enter your text here</textarea>
-    <button onclick="changeText()">Make the text sindsyg</button>
+    <div class = "myButton">
+      <button onclick="changeText()" class = "theButton">Make the text sindsyg</button>
+    </div>
 
     <script>
       // You can also require other files to run in this process
