Added more knowledge to onescript.js

--- a/js/index.html
+++ b/js/index.html
@@ -20,6 +20,8 @@
       <button onclick="changeText()" class = "theButton">Make the text sindsyg</button>
     </div>
 
+    <script src="onescript.js"></script>
+
     <script>
       // You can also require other files to run in this process
       require('./renderer.js');
