--- a/js/index.html
+++ b/js/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>MakE yOUr teXT SiNDSYg</title>
-    <script src="meme.js"></script>
+    <!-- <script src="meme.js"></script> -->
+    <script src="calculator.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
   <body>
@@ -17,10 +18,11 @@
     </div>
 
     <div class = "myButton">
-      <button onclick="changeText()" class = "theButton">Make the text sindsyg</button>
+      <!-- <button onclick="changeText()" class = "theButton">Make the text sindsyg</button> -->
+      <button onclick="calculateText()" class = "theButton">Make the text sindsyg</button>
     </div>
 
-    <script src="onescript.js"></script>
+    <!-- <script src="onescript.js"></script> -->
 
     <script>
       // You can also require other files to run in this process
