Added multi functionality

--- a/js/index.html
+++ b/js/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>MakE yOUr teXT SiNDSYg</title>
-    <!-- <script src="meme.js"></script> -->
+    <script src="meme.js"></script>
     <script src="calculator.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
@@ -18,8 +18,11 @@
     </div>
 
     <div class = "myButton">
-      <!-- <button onclick="changeText()" class = "theButton">Make the text sindsyg</button> -->
-      <button onclick="calculateText()" class = "theButton">Make the text sindsyg</button>
+      <button onclick="calculateText()" class = "theButton">Solve the text as math</button>
+    </div>
+
+    <div class = "myButton2">
+      <button onclick="changeText()" class = "theButton2">Make the text sindsyg</button>
     </div>
 
     <!-- <script src="onescript.js"></script> -->
